[tool.poetry]
name = "hello-langchain"
version = "0.1.0"
description = ""
authors = ["Eduardo Ballesteros <eduardo.ballesterosg@outlook.com>"]
readme = "README.md"
packages = [{include = "hello_langchain"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.135"
huggingface-hub = "^0.13.4"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
sentencepiece = "^0.1.97"
chromadb = "^0.3.21"
openai = "^0.27.4"
tiktoken = "^0.3.3"
faiss-cpu = "^1.7.3"
bs4 = "^0.0.1"
wolframalpha = "^5.0.0"
youtube-transcript-api = "^0.6.0"
pytube = "^12.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
