[tool.poetry]
name = "contacts-app"
version = "0.1.0"
description = ""
authors = ["Eduardo Ballesteros <eduardo.ballesterosg@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
